<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="fragment_estate_detail_name">Estate Detail</string>
    <string name="fragment_maps_name">Estate Map</string>
    <string name="activity_manage_estate">Manage Estate</string>
    <string name="activity_show_images">Estate\'s Images</string>
    <string name="activity_credit_simulator">Credit Simulator</string>
    <string name="activity_settings">Settings</string>
    <string name="activity_main_dialog_about_title">About</string>
    <string name="activity_main_dialog_about_message">"<p>This application is developed by Desperu.\nSource code on <a href="https://github.com/desperu/RealEstateManager">github.com</a>.\n\nIf you have an issue with this application, please search <a href="https://github.com/desperu/RealEstateManager/issues">here</a>", create a new issue if there isn't yours. \nYou must create an account if you haven't.\n\nYou need help to use RealEstateManager application?\nFind the documentation "<a href="https://github.com/desperu/RealEstateManager/blob/master/Documentation/Documentation%20Fonctionnelle%20Real%20Estate%20Manager.pdf">here</a>.</p>"</string>
    <string name="activity_main_dialog_about_positive_button">OK</string>
    <string name="fragment_estate_list_item_text_empty">There isn\'t any Estate found !</string>
    <string name="fragment_estate_detail_text_title_at">%1$s at %2$s</string>
    <string name="fragment_estate_detail_text_no_data">N/A</string>
    <string name="fragment_estate_detail_text_category_images">Images</string>
    <string name="fragment_estate_detail_text_category_description">Description</string>
    <string name="fragment_estate_detail_text_no_description">There\'s no description set !</string>
    <string name="fragment_estate_detail_text_subcategory_location">Location</string>
    <string name="fragment_estate_detail_text_subcategory_surface">Surface</string>
    <string name="fragment_estate_detail_text_subcategory_room_number">Number of rooms</string>
    <string name="fragment_maps_popup_title_permission_location">This application need location permission.</string>
    <string name="fragment_maps_text_no_google_play_services_available">Congratulation!! You don\'t have google play services, it\'s spies services that\'s register all your activities and data. You don\'t have google map, so there\'s no map available in this application. In future version, we will add OpenStreetMap, witch provide a full secure service!!</string>
    <string name="fragment_maps_text_no_internet_connexion">There\'s no internet connexion, check your connexion and refresh this screen.</string>
    <string name="fragment_maps_text_no_location_enabled">There\'s no geo-location service available, check your location settings and refresh this screen.</string>
    <string name="fragment_filter_text_location">Location</string>
    <string name="fragment_filter_text_flat">Flat</string>
    <string name="fragment_filter_text_duplex">Duplex</string>
    <string name="fragment_filter_text_house">House</string>
    <string name="fragment_filter_text_penthouse">Penthouse</string>
    <string name="fragment_filter_text_min_images_number">Minimum images number</string>
    <string name="fragment_filter_text_school">School</string>
    <string name="fragment_filter_text_shop">Shop</string>
    <string name="fragment_filter_text_park">Park</string>
    <string name="fragment_filter_text_begin_date">Begin date</string>
    <string name="fragment_filter_text_end_date">End date</string>
    <string name="activity_manage_estate_save_estate_message">Estate saved!</string>
    <string name="alert_dialog_save_estate_title">Estate Modified !</string>
    <string name="alert_dialog_save_estate_message">Do you want save modifications?</string>
    <string name="alert_dialog_save_estate_positive_button">Save</string>
    <string name="alert_dialog_save_estate_negative_button">Dismiss</string>
    <string name="alert_dialog_no_sold_date_title">No Sold date set !</string>
    <string name="alert_dialog_no_sold_date_message">You must set the sold date to change an estate state to sold out.</string>
    <string name="alert_dialog_no_sold_date_positive_button">Select Sold Date</string>
    <string name="alert_dialog_no_sold_date_negative_button">Set For Sale</string>
    <string name="alert_dialog_no_sold_date_neutral_button">Clear state</string>
    <string name="fragment_estate_data_text_category_estate_data">Estate Data</string>
    <string name="fragment_estate_data_text_type">Estate Type</string>
    <string name="fragment_estate_data_text_price">Estate Price</string>
    <string name="fragment_estate_data_text_price_unity">$</string>
    <string name="fragment_estate_data_text_surface_area">Surface Area</string>
    <string name="fragment_estate_data_text_surface_unity">m²</string>
    <string name="fragment_estate_data_text_rooms_number">Rooms Number</string>
    <string name="fragment_estate_data_text_description">Description</string>
    <string name="fragment_estate_data_text_description_hint">Enter estate description here …</string>
    <string name="fragment_estate_image_popup_title_permission_files_access">This application need storage permission.</string>
    <string name="fragment_estate_image_popup_title_permission_write_storage_and_camera">This application need write storage, and camera permissions.</string>
    <string name="fragment_estate_image_toast_permission_refused">Permission refused !!</string>
    <string name="fragment_estate_image_toast_error_getting_bitmap">An error happened while recovering the photo !</string>
    <string name="fragment_estate_image_toast_title_no_image_chosen">No image chosen&#8230;</string>
    <string name="fragment_estate_image_toast_error_write_external_storage">Error : can\'t write on internal storage (user storage)!</string>
    <string name="fragment_estate_image_toast_saved_text">Text saved !</string>
    <string name="fragment_estate_image_toast_saved_photo">Photo saved !</string>
    <string name="fragment_estate_image_toast_deleted_photo">Photo deleted !</string>
    <string name="fragment_estate_image_toast_error_happened">An error happened !</string>
    <string name="item_manage_image_button_primary">Primary</string>
    <string name="item_manage_image_button_delete">Delete</string>
    <string name="alert_dialog_image_title">Select Action</string>
    <string name="alert_dialog_image_button_choose">Select photo from gallery</string>
    <string name="alert_dialog_image_button_take">Take photo with camera</string>
    <string name="fragment_estate_address_text_address">Address</string>
    <string name="fragment_estate_address_text_street_number">Street Number</string>
    <string name="fragment_estate_address_text_street_name">Street Name</string>
    <string name="fragment_estate_address_text_flat_building">Flat/Building</string>
    <string name="fragment_estate_address_text_postal_code">Postal Code</string>
    <string name="fragment_estate_address_text_city">City</string>
    <string name="fragment_estate_address_text_country">Country</string>
    <string name="fragment_estate_address_text_category_interest_places">Interest Places</string>
    <string name="fragment_estate_sale_text_category_sale_data">Sale Data</string>
    <string name="fragment_estate_sale_text_sale_date">Sale Date</string>
    <string name="fragment_estate_sale_text_sold_out_date">Sold Out Date</string>
    <string name="fragment_estate_sale_text_state">State</string>
    <string name="fragment_estate_sale_text_real_estate_agent">Real Estate Agent</string>
    <string name="activity_credit_simulator_credit_amount">Credit Amount</string>
    <string name="activity_credit_simulator_credit_contribution">Credit Contribution</string>
    <string name="activity_credit_simulator_interest_rate">Interest Rate (in %)</string>
    <string name="activity_credit_simulator_credit_duration">Credit Duration (in year)</string>
    <string name="activity_credit_simulator_monthly_payment">Monthly Payment</string>
    <string name="activity_credit_simulator_credit_cost">Credit Cost</string>
    <string name="activity_credit_simulator_real_rate">Real Interest Rate (in %)</string>
    <string name="activity_credit_simulation_real_rate_explication">The real interest rate is : Credit Cost / Credit Amount (in percent)</string>
    <string name="activity_credit_simulator_warning">This credit simulator is only for estimation,\nnot a real credit contract !</string>
    <string name="activity_credit_simulator_dialog_title">Error !!</string>
    <string name="activity_credit_simulator_dialog_message">The credit contribution is over the credit amount !!</string>
    <string name="activity_credit_simulator_dialog_positive_button">Clear Contribution</string>
    <string name="activity_credit_simulator_dialog_negative_button">Reset all data</string>
    <string name="activity_settings_text_category_notification" translatable="false">Notifications</string>
    <string name="activity_settings_text_notifications_state">Enable notifications</string>
    <string name="activity_settings_text_notifications_description">Sent a notification when an estate was created.</string>
    <string name="activity_settings_text_notifications_disable_update">Disable notification when update estate</string>
    <string name="activity_settings_text_notifications_disable_update_description">Disable notification when an estate was updated.</string>
    <string name="activity_settings_text_category_map">Map</string>
    <string name="activity_settings_text_map_zoom_size">Map zoom level</string>
    <string name="activity_settings_text_map_zoom_size_description">Set zoom level for the map, default 18, min 2, max 21.</string>
    <string name="activity_settings_text_map_zoom_button">Enable map zoom button</string>
    <string name="activity_settings_text_map_zoom_button_description">Show map zoom button, to control map zoom.</string>
    <string name="activity_settings_text_category_reset_settings">Reset Settings</string>
    <string name="activity_settings_text_reset_settings">Reset Settings</string>
    <string name="activity_settings_text_reset_settings_description">Reset settings to original state.</string>
    <string name="activity_settings_dialog_reset_settings_message">Are you sure you want reset settings to default?</string>
    <string name="activity_settings_dialog_positive_button" translatable="false">OK</string>
    <string name="activity_settings_dialog_negative_button">Cancel</string>
    <string name="activity_settings_toast_zoom_level_wrong_value">Zoom level must be under 2 and 21 !</string>
    <string name="activity_settings_toast_reset_settings_default">Settings Reset to default !</string>
    <string name="navigation_drawer_estate_list">Estate List</string>
    <string name="navigation_drawer_estate_map">Estate Map</string>
    <string name="navigation_drawer_estate_new">New Estate</string>
    <string name="navigation_drawer_category_utilities">Utilities</string>
    <string name="navigation_drawer_search">Search</string>
    <string name="navigation_drawer_credit">Credit Simulator</string>
    <string name="navigation_drawer_category_parameter">Parameters</string>
    <string name="navigation_drawer_settings">Settings</string>
    <string name="navigation_drawer_about">About</string>
    <string name="navigation_drawer_help">Help</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="menu_item_add">Add</string>
    <string name="menu_item_update">Update</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_valid">Valid</string>
    <string name="activity_main_search_edit_text_hint">Search estate</string>
    <string name="custom_spinner_select">Select…</string>
</resources>