<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single"
        android:id="@+id/activity_main_menu_drawer_group">

        <item
            android:id="@+id/activity_main_menu_drawer_estate_list"
            android:icon="@drawable/ic_baseline_view_list_black_24"
            android:title="@string/navigation_drawer_estate_list"/>

        <item
            android:id="@+id/activity_main_menu_drawer_estate_map"
            android:icon="@drawable/ic_baseline_map_black_24"
            android:title="@string/navigation_drawer_estate_map"/>

        <item
            android:id="@+id/activity_main_menu_drawer_estate_new"
            android:icon="@drawable/ic_baseline_add_circle_black_24"
            android:title="@string/navigation_drawer_estate_new"/>

    </group>

</menu>